Changes made by DLC Solucoes em Tecnologia (wantero@dlctec.com.br).

--- a/Camera Sample/index.html
+++ b/Camera Sample/index.html
@@ -16,7 +16,7 @@
                 <button class="button dh" id="capturePhotoButton">Take Photo</button>
 				<button class="button dh" id="capturePhotoEditButton" >Take Editable Photo (iOS only)</button>
                 <button class="button dh" id="getPhotoFromLibraryButton">Select from Photo Library</button>
-		        <button class="button dh" id="getPhotoFromAlbumButton">Select from Photo Album</button>
+		        <button class="button dh" id="getPhotoFromAlbumButton" style="background-color: red">Select from Photo Album</button>
 			</div>
             <div class="result-area ch50">
                 <div class="results">
